[package]
name = "tgreddit"
version = "0.1.4"
edition = "2024"
description = "Get the top posts of your favorite subreddits to Telegram"
license = "MIT"

[dependencies]
anyhow = "1.0.64"
chrono = "0.4.22"
duct = "0.13.5"
env_logger = "0.11"
getopts = "0.2.21"
itertools = "0.14"
log = "0.4.17"
regex = { version = "1.6.0", default-features = false, features = ["std", "unicode-perl"] }
rusqlite = { version = "0.39", features = ["chrono", "bundled"] }
rusqlite_migration = "2"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
signal-hook = "0.3.14"
strum = { version = "0.28", features = ["derive"] }
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros", "sync"] }
toml = "1"
url = "2.2.2"
xdg = "2.4.1"
reqwest = { version = "0.11.11", features = ["json"] }

# Use vendored openssl. We don't depend on it directly.
openssl = { version = "0.10.41", features = ["vendored"], optional = true }

[features]
vendored-openssl = ["openssl"]
