[package]
name = "tgreddit"
version = "0.1.7"
edition = "2024"
description = "Get the top posts of your favorite subreddits to Telegram"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = "0.4"
getopts = "0.2"
itertools = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "native-tls"] }
rusqlite = { version = "0.39", features = ["chrono", "bundled"] }
rusqlite_migration = "2"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.4"
strum = { version = "0.28", features = ["derive"] }
teloxide = { version = "0.17", features = ["macros"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process"] }
toml = "1"
url = "2"
xdg = "3"

# Use vendored openssl. We don't depend on it directly.
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
vendored-openssl = ["openssl"]
